--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,57 @@
-.App {
-  text-align: center;
-}
+/**************************************************Navbar****************************************/
+.header-container{ display: flex;justify-content: space-between;
+max-width: 100%;}
+.Nav_bar{max-width:100%;background-color: aliceblue;position: fixed;top: 0;right: 0;}
+.Nav-list{display: flex; justify-content: end;}
+.header{list-style-type:none;}
+.nav-logo{width: 30%;height: 40%;padding-top: 2%;}
+.Nav_bar{display: flex;justify-content: space-between;}
+.titlelist{text-decoration: none;}
+/*******************************************************Header****************************************/
+.header-logo{max-width: 100%;width: 5%;height: 3%;}
+.SecondDiv{max-width: 100%;text-align: center;padding: 3% 0%;margin-top: 6%;    color: #00b39b;}
+/**********************************************DocPresentation***************************************/
+.paragraph{max-width: 100%;display: flex; justify-content: space-around; padding: 2% 10%;color: #747474;}
+/**********************************************DocPreImg**************************************************/
+.BoxesDiv_style{max-width: 100%;display: flex;justify-content: space-around;}
+.DocPreImg{max-width: 50%; }
+.box{ background-color: rgba(15, 216, 189); /* Green */ border: 2px solid rgba(15, 216, 189) ; color:white;
+ border-radius: 15px;width: 35%;padding: 5px;right: 0;}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+/**************************************************DocStats*******************************************/
+.background-green-div{max-width: 100%;display: flex; justify-content: space-between;   background: #e5faf8;}
+.boxescol{max-width: 60%;}
+.boxesdisplay{display: flex; justify-content: space-evenly; flex-wrap: wrap;padding: 3% 1%;}
+.txt-green-title {color: #00b39b;font-size: 90%;}
+.Whitebox{max-width: 35%;background: white; text-align: center;}
+.textdisplay{max-width: 40%;padding: 1% 6%;}
+.txt-green{padding-top: 5%;color: #00b39b;font-size: 150%; max-width: 70%;}
+.txt-gray{font-size: 70%;max-width: 70%;color: #747474;}
+.imagedisplay{max-width: 90%; }
+/**********************paradiv**************************************************/
+.Secondparagraphs{max-width: 100%;padding: 4% 0;}
+.para{max-width: 50%;padding: 0 30%;text-align: center;}
+.para2{max-width: 60%;padding: 0 30%;text-align: center;}
+/******************************************DocPresentation**********************************************/
+.brand-links{display: flex; justify-content: center;flex-wrap: wrap;margin: 4% 0;}
+.brand-list-one{font-size: 120%;    color: #00b39b;max-width: 30%;}
+.brand-list-two{display: flex; justify-content: space-between;flex-wrap: wrap;padding: 1%;max-width: 60%;}
+.listlinkbrand{padding: 0 1%;}
+/********************************************DocImG*******************************************************/
+.grid-div{max-width:100%;padding: 2%;}
+.grid-container-one{display: flex; flex-wrap: wrap;}
+.grid-box:hover{ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}
+.grid-box{border-top-left-radius: 65px; border-top-right-radius: 15px;}
+.info{display: flex;justify-content: space-between;align-items: baseline;}
+.grid-info{width: 50% } .grid-container-one{ display: flex;justify-content: space-around;padding: 2%;}
+.imgradious{border-top-left-radius: 15px; border-top-right-radius: 15px;}
+.abutton{background-color: rgb(18, 113, 238);color: rgb(255, 255, 255);border: 2px solid rgb(18, 113, 238);
+padding: 5px 10px;font-size: 12px;text-align: center;text-decoration: none;border-radius: 8px}
+.abutton:hover{border-color: rgb(71, 71, 204);background-color:  rgb(59, 59, 238);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*************************************Foote************************************************************/
+.alldisplay{max-width: 100%;display: flex;justify-content: space-around;flex-wrap: wrap;padding-top: 2%;}
+.alldisplay p{font-size: 70%;}
+.linksdisplay{ display: flex;justify-content: space-between; flex-wrap: wrap;font-size: 70%;}
+.afooter{text-decoration: none;}
+.Privacy{max-width: 70%;text-align: center;padding: 0 15%;font-size: 70%;}
